Add endpoint for updating a course
